--- a/notebook/Data Quality and Quarantine framework.ipynb
+++ b/notebook/Data Quality and Quarantine framework.ipynb
@@ -64,6 +64,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "d960db34-d89c-4267-9c24-6cbbefd7d7d3",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Cell 4"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Users/abhijeet.kumar12@tcs.com/dq-framework-proj-02/notebook/sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "92f5f4e8-6f1f-4dc7-801e-075c75946488",
      "showTitle": false,
      "tableResultSettingsMap": {},
