--- a/notebook/Data Quality and Quarantine framework.ipynb
+++ b/notebook/Data Quality and Quarantine framework.ipynb
@@ -72,7 +72,28 @@
    },
    "outputs": [],
    "source": [
-    "%run /Users/abhijeet.kumar12@tcs.com/dq-framework-proj-02/notebook/sample"
+    "#%run /Users/abhijeet.kumar12@tcs.com/dq-framework-proj-02/notebook/sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c4c73595-cead-41a9-8073-a89cb603b3e8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run ./sample"
    ]
   },
   {
